--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^1.0.8",
     "element-ui": "^2.4.1",
     "iview": "^2.14.3",
     "vue": "^2.5.2",
@@ -42,10 +43,11 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sortablejs": "^1.7.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "sortablejs": "^1.7.0",
     "style-loader": "^0.21.0",
+    "tinymce": "^4.8.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.7.2",
